--- a/searchbargoodWP/package.json
+++ b/searchbargoodWP/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -28,6 +28,7 @@
     "concat": "^1.0.3",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
+    "sp-pnp-js": "^3.0.10",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
